# python-newtype-upcast

./: README.md  pyproject.toml
src/newtype_upcast/: cli.py
