[tool.poetry]
name = "newtype-upcast"
version = "0.1.0"
description = ""
authors = ["Naoya Yamashita <conao3@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.scripts]
newtype-upcast = "newtype_upcast.cli:main"

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
